--- a/bochsrc.template
+++ b/bochsrc.template
@@ -1,5 +1,5 @@
 boot: cdrom
-ata0-master: type=cdrom, path=FlapjackOS.iso, status=inserted
+ata0-master: type=cdrom, path=build_cross/FlapjackOS.iso, status=inserted
 
 # Options useful for debugging the system
 port_e9_hack: enabled=1
