--- a/gitignore.template
+++ b/gitignore.template
@@ -1,31 +1,9 @@
 syntax:glob
 .gitignore
-CMakeCache.txt
-CMakeFiles/
-FlapjackOS.iso
-Kernel/CMakeFiles/
-Kernel/Makefile
-Kernel/cmake_install.cmake
-Kernel/libKernel.a
-Kernel/CTestTestfile.cmake
-Kernel/KernelTest
-LibC/CMakeFiles/
-LibC/Makefile
-LibC/cmake_install.cmake
-LibC/libLibC.a
-LibC/CTestTestfile.cmake
-LibC/LibCTest
-Makefile
-Malloc/CMakeFiles/
-Malloc/Makefile
-Malloc/cmake_install.cmake
-Malloc/libMalloc.a
-Malloc/CTestTestfile.cmake
-Malloc/MallocTest
+.DS_Store
 bochsout.txt
 bochsrc
-cmake_install.cmake
+build_cross/
+build_host/
 debugger.out
-kernel.bin
 parport.out
-CTestTestfile.cmake
