Move printf stuff to LibC subdirectory.

--- a/LibC/CMakeLists.txt
+++ b/LibC/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.6)
 # We build our own libc as a static library.
 # This can be linked to the kernel or to userspace programs.
 set(SOURCE_FILES_LIBC
-    "include/string.h"
-    "src/string.c"
+    "include/string.h" "src/string.c"
+    "include/stdio.h" "src/stdio.c"
     )
 add_library(LibC STATIC ${SOURCE_FILES_LIBC})
 
@@ -16,8 +16,11 @@ if(NOT CMAKE_CROSSCOMPILING)
 
     link_directories(${CHECK_LIBRARIES_DIR})
 
+    include_directories("include")
+
     add_executable(LibCTest
                    "test/test_string.c"
+                   "test/test_stdio.c"
                    "test/test_main.c"
                    )
 
