Start using dynamic memory allocation in the kernel.
Initialize the kernel heap and demonstrate it by dynamically allocating the
buffer for user input.

--- a/LibC/CMakeLists.txt
+++ b/LibC/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.6)
 # We build our own libc as a static library.
 # This can be linked to the kernel or to userspace programs.
 set(SOURCE_FILES_LIBC
+    "include/assert.h"
     "include/string.h" "src/string.c"
     "include/stdio.h" "src/stdio.c"
     )
