--- a/Malloc/CMakeLists.txt
+++ b/Malloc/CMakeLists.txt
@@ -8,15 +8,22 @@ set(SOURCE_FILES_MALLOC
     "include/malloc/malloc_block.h"
     "src/malloc_zone.c"
     )
-include_directories("include")
+
+include_directories(BEFORE "include")
 add_library(Malloc STATIC ${SOURCE_FILES_MALLOC})
 
-if(NOT CMAKE_CROSSCOMPILING)
+if(CMAKE_CROSSCOMPILING)
 
-    include_directories("include"
-                        ${CHECK_INCLUDE_DIRS}
+  # When cross-compiling, build using our own LibC.
+  # When we build unit tests, we use the system LibC instead.
+  include_directories(BEFORE ${LIBC_INCLUDE_DIRS} )
+  target_link_libraries(Malloc 
+                        ${LIBC_LIBRARIES}
                         )
 
+else(CMAKE_CROSSCOMPILING)
+
+    include_directories(${CHECK_INCLUDE_DIRS})
     link_directories(${CHECK_LIBRARIES_DIR})
 
     add_executable(MallocTest
@@ -31,4 +38,4 @@ if(NOT CMAKE_CROSSCOMPILING)
 
     add_test(MallocTest ${CMAKE_CURRENT_BINARY_DIR}/MallocTest)
 
-endif()
+endif(CMAKE_CROSSCOMPILING)
