Major reorganization of code to make it easier to unit test.
* Rename LibC to Common because it is NOT a C standard library.
* Fix the issue of host libc header names colliding with libCommon
  header names by moving the libCommon headers out of the default search
  path when building unit tests on the host system.
* libCommon now has abstract interface headers for keyboard, console,
  memory allocation. The concrete implementations are elsewhere but can be
  provided to libCommon via pointers to an interface.
* Moved readline to libCommon. It relies on provided interfaces.
* Added libCommon unit tests for string.h.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,20 @@ else()
 
 endif()
 
-add_subdirectory("LibC")
-set(LIBC_LIBRARIES LibC)
-set(LIBC_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/LibC")
-set(LIBC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/LibC/include")
+add_subdirectory("Common")
+set(COMMON_LIBRARIES Common)
+set(COMMON_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/Common")
+if(CMAKE_CROSSCOMPILING)
+    # Some of our headers have names that collide with the host libc.
+    # So, we omit those from the header search path unless building for
+    # a cross-compile.
+    set(COMMON_INCLUDE_DIRS
+        "${PROJECT_SOURCE_DIR}/Common/include"
+        "${PROJECT_SOURCE_DIR}/Common/include/flapjack_libc"
+        )
+else(CMAKE_CROSSCOMPILING)
+    set(COMMON_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Common/include")
+endif(CMAKE_CROSSCOMPILING)
 
 add_subdirectory("Malloc")
 set(MALLOC_LIBRARIES Malloc)
