Begin placing readline under a OOP-like interface.

--- a/Malloc/CMakeLists.txt
+++ b/Malloc/CMakeLists.txt
@@ -5,22 +5,21 @@ cmake_minimum_required(VERSION 3.6)
 # used by the userspace libc.
 set(SOURCE_FILES_MALLOC
     "include/malloc/malloc_zone.h"
+    "include/malloc/malloc_zone_private.h"
     "src/malloc_zone.c"
     )
 
 include_directories(BEFORE "include")
 add_library(Malloc STATIC ${SOURCE_FILES_MALLOC})
 
-if(CMAKE_CROSSCOMPILING)
+# When cross-compiling, build using libCommon, which implements a subset of
+# the C standard library. When we build unit tests, we use the system libc.
+include_directories(BEFORE ${COMMON_INCLUDE_DIRS} )
+target_link_libraries(Malloc 
+                      ${COMMON_LIBRARIES}
+                      )
 
-  # When cross-compiling, build using libCommon, which implements a subset of
-  # the C standard library. When we build unit tests, we use the system libc.
-  include_directories(BEFORE ${COMMON_INCLUDE_DIRS} )
-  target_link_libraries(Malloc 
-                        ${COMMON_LIBRARIES}
-                        )
-
-else(CMAKE_CROSSCOMPILING)
+if(NOT CMAKE_CROSSCOMPILING)
 
     include_directories(${CHECK_INCLUDE_DIRS})
     link_directories(${CHECK_LIBRARIES_DIR})
@@ -37,4 +36,4 @@ else(CMAKE_CROSSCOMPILING)
 
     add_test(MallocTest ${CMAKE_CURRENT_BINARY_DIR}/MallocTest)
 
-endif(CMAKE_CROSSCOMPILING)
+endif(NOT CMAKE_CROSSCOMPILING)
