Abstract interfaces for keyboard and timer devices.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE_FILES
     "include/flapjack_libc/assert.h"
     "include/flapjack_libc/string.h" "src/string.c"
     "include/flapjack_libc/stdio.h" "src/stdio.c"
+    "include/flapjack_libc/stdlib.h" "src/stdlib.c"
     "include/line_editor.h" "include/line_editor_private.h" "src/line_editor.c"
     "include/console_printf.h" "src/console_printf.c"
     "include/interfaces/console_interface.h"
@@ -12,7 +13,11 @@ set(SOURCE_FILES
 include_directories("include")
 add_library(Common STATIC ${SOURCE_FILES})
 
-if(NOT CMAKE_CROSSCOMPILING)
+if(CMAKE_CROSSCOMPILING)
+
+    include_directories("include/flapjack_libc")
+
+else(CMAKE_CROSSCOMPILING)
 
     include_directories(${CHECK_INCLUDE_DIRS})
     link_directories(${CHECK_LIBRARIES_DIR})
@@ -30,4 +35,4 @@ if(NOT CMAKE_CROSSCOMPILING)
 
     add_test(CommonTest ${CMAKE_CURRENT_BINARY_DIR}/CommonTest)
 
-endif()
+endif(CMAKE_CROSSCOMPILING)
