Added algorithm header with std::min/max. Nothing else, though.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
     "include/flapjack_libc/cstdio"
     "include/flapjack_libc/cstdlib"
     "include/flapjack_libc/cstring"
+    "include/flapjack_libc/algorithm"
 
     "include/flapjack_libc/assert.h"
     "include/flapjack_libc/string.h" "src/string.c"
