--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -15,24 +15,15 @@ set(SOURCE_FILES
 
     "include/line_editor.hpp" "src/line_editor.cpp"
     "include/console_printf.hpp" "src/console_printf.cpp"
+    "include/common/linked_list.hpp"
 
     "include/interfaces/console_device.hpp"
     "include/interfaces/keyboard_device.hpp"
-
-    "include/ll_str.h" "src/ll_str.c" # generated
 
     "src/c_plus_plus_support.cpp"
     )
 include_directories("include")
 add_library(Common STATIC ${SOURCE_FILES})
-
-GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/Common/include/linked_list.h.erb"
-                           "${PROJECT_SOURCE_DIR}/Common/include/ll_str.h"
-                           "suffix=str type=char*")
-
-GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/Common/src/linked_list.c.erb"
-                           "${PROJECT_SOURCE_DIR}/Common/src/ll_str.c"
-                           "suffix=str type=char*")
 
 if(CMAKE_CROSSCOMPILING)
 
