--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,20 +102,23 @@ if(CMAKE_CROSSCOMPILING)
     include_directories(${KERNEL_INCLUDE_DIRS})
     link_directories(${KERNEL_LIBRARIES_DIRS})
 
+    # The kernel binary image is built using only static libraries, with no
+    # source code. Really, what we're doing is linking exisitng code together in
+    # a way that produces a multiboot compliant kernel.
+    # 
+    # However, CMake demands the target have at least one source file.
+    # Use an empty file.
+    file(WRITE "${CMAKE_BINARY_DIR}/dummy.c" "")
+
     # The layout file specifies how the linker puts together the binary image.
     set(KERNEL_LAYOUT_FILE "${PROJECT_SOURCE_DIR}/kernel.ld")
-
-    # Force a dependency between boot.S and the linker layout so that a build is
-    # triggered when it changes.
-    set_source_files_properties(
-        ${PROJECT_SOURCE_DIR}/boot.S PROPERTIES OBJECT_DEPENDS ${KERNEL_LAYOUT_FILE}
-    )
 
     # The linker produces a kernel binary image which is multiboot compliant and
     # can actually be directly booted by Qemu.
     set(KERNEL_BIN "kernel.bin")
     set(KERNEL_LINK_FLAGS "-m32 -march=i386 -T ${KERNEL_LAYOUT_FILE}")
-    add_executable(${KERNEL_BIN} boot.S)
+    add_executable(${KERNEL_BIN} "${CMAKE_BINARY_DIR}/dummy.c")
+    set_target_properties(${KERNEL_BIN} PROPERTIES LINK_DEPENDS ${KERNEL_LAYOUT_FILE})
     target_link_libraries(${KERNEL_BIN}
                           ${KERNEL_LIBRARIES}
                           )
@@ -134,7 +137,7 @@ if(CMAKE_CROSSCOMPILING)
     add_custom_command(
         OUTPUT ${CMAKE_PROJECT_NAME}.iso
         COMMAND ${BUILD_ISO_TOOL} ${CMAKE_BINARY_DIR}/${KERNEL_BIN} "${CMAKE_SOURCE_DIR}/grub.cfg" ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.iso
-        DEPENDS ${BUILD_ISO_TOOL} ${CMAKE_BINARY_DIR}/${KERNEL_BIN} "${CMAKE_SOURCE_DIR}/grub.cfg"
+        DEPENDS "${CMAKE_SOURCE_DIR}/grub.cfg"
         COMMENT "Build the bootable ISO."
         VERBATIM
     )
